[package]
name = "neuromod"
version = "0.2.2"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Reward-modulated spiking neural networks (LIF + Izhikevich + R-STDP + dopamine/cortisol/acetylcholine) for neuromorphic research and FPGA deployment"
exclude = ["docs/"]
repository = "https://github.com/rmems/neuromod"
keywords = ["snn", "neuromorphic", "stdp", "spiking", "fpga"]
categories = ["science", "algorithms", "hardware-support"]

[lib]
name = "neuromod"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
