[package]
name = "neuromod"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A pure spiking neural network library featuring LIF, Izhikevich, and Hodgkin-Huxley dynamics."
exclude = ["docs/"]
repository = "https://github.com/rmems/neuromod"
keywords = ["snn", "neuromorphic", "stdp", "spiking", "fpga"]
categories = ["science", "algorithms", "hardware-support"]

[lib]
name = "neuromod"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
