[package]
name = "neuromod"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Raul Montoya Cardneas <montoyaraul34@gmail.com>"]
description = "A high-performance Rust SNN library for neuroscience research and pure spiking neural network library featuring LIF, Izhikevich, Hebbian, Nagumo, Lapicque and Hodgkin-Huxley dynamics."
exclude = ["docs/"]
repository = "https://github.com/Spikenaut/neuromod"
readme = "README.md"
keywords = ["snn", "neuromorphic", "stdp", "spiking", "spikenaut"]
categories = ["science", "algorithms", "simulation"]

[workspace]

[lib]
name = "neuromod"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "neuron_bench"
harness = false

[[bench]]
name = "stdp_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "modulation_bench"
harness = false


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
